<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Workout</string>
    <string name="action_settings">Settings</string>
    <string name="mainTitle">Workouts</string>
    <string name="addWorkout">Add Workout</string>
    <string name="title_activity_customize_workout">Customize Workout</string>
    <string name="addMenuWorkoutTitle">Workout Name</string>
    <string name="addMenuExcercisesTitle">Exercises</string>
    <string name="addMenuAddExercicesTitle">Add Exercise</string>
    <string name="title_activity_customize_exercise">Customize Exercise</string>
    <string name="title_activity_use_workout">Use Workout</string>
    <string name="addExerciseButton">Add Exercise</string>
    <string name="addExerciseNameTitle">Exercise Name</string>
    <string name="addExerciseReps"># of reps</string>
    <string name="addExerciseSets"># of sets</string>
    <string name="action_save">Save &amp; Exit</string>
    <string name="action_exit">Exit Without Saving</string>
    <string name="selectExerciseTitle">Select Exercise</string>
    <string name="record_workout">Record</string>
    <string name="action_history">View History</string>
    <string name="title_activity_view_history_menu">View History</string>
    <string name="title_activity_view_history_exercise">View History</string>

</resources>
