<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_history"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/action_history"/>
    <item
        android:id="@+id/action_create_exercise"
        android:icon="@drawable/ic_action_new"
        android:title="@string/addExerciseButton"
        android:showAsAction="never" />

    <item android:id="@+id/action_save"
          android:icon="@drawable/ic_action_save"
          android:title="@string/action_save"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_exit"
          android:icon="@drawable/ic_action_discard"
          android:title="@string/action_exit"
          android:showAsAction="ifRoom" />

</menu>
